# phongthuy-bds-broker

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  security.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260515_0001_initial.py
apps/api/src/phongthuy_bds/: __init__.py  main.py
apps/api/src/phongthuy_bds/api/: deps.py
apps/api/src/phongthuy_bds/api/v1/: router.py
apps/api/src/phongthuy_bds/api/v1/endpoints/: auth.py  billing.py  customers.py  health.py  ocr.py  reports.py
apps/api/src/phongthuy_bds/core/: config.py  logging.py  security.py
apps/api/src/phongthuy_bds/db/: base.py  models.py  session.py
apps/api/src/phongthuy_bds/schemas/: auth.py  customer.py  ocr.py  report.py
apps/api/src/phongthuy_bds/scripts/: seed_demo.py
apps/api/src/phongthuy_bds/services/: storage.py
apps/api/src/phongthuy_bds/services/billing/: credits.py  vnpay.py
apps/api/src/phongthuy_bds/services/feng_shui/: engine.py
apps/api/src/phongthuy_bds/services/ocr/: so_do.py
apps/api/src/phongthuy_bds/services/report/: generator.py  pdf.py
apps/api/src/phongthuy_bds/services/report/templates/: report.html
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth_flow.py  test_full_flow.py  test_health.py
apps/api/tests/unit/: test_feng_shui_engine.py  test_security.py
apps/web/: README.md  next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/app/reports/[id]/: page.tsx
apps/web/app/reports/new/: page.tsx
apps/web/lib/: api.ts  utils.ts
docs/: architecture.md  feng-shui-spec.md  index.md  legal-compliance.md
infra/docker/: api.Dockerfile  web.Dockerfile
