[project]
name = "phongthuy-bds-monorepo"
version = "0.1.0"
description = "Phong thủy BĐS plug-in for VN real-estate brokers — monorepo root"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api", "packages/ontology"]

[tool.uv.sources]
phongthuy-ontology = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps/api/src", "packages/ontology/src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle + pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "N",              # pep8-naming
    "RUF",            # ruff-specific
    "SIM",            # simplify
    "PT",             # pytest
]
ignore = [
    "E501",     # line too long (covered by formatter)
    "B008",     # function call in default arg (FastAPI Depends)
    "N812",     # lowercase imported as non-lowercase (false positive với VN terms)
    "RUF001",   # ambiguous unicode (false-positive với tiếng Việt: ố, ề, …)
    "RUF002",   # idem trong docstring
    "RUF003",   # idem trong comment
    "UP037",    # quoted annotation (cố tình giữ cho forward-ref)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B", "PT011", "PT006", "SIM", "F841", "RUF007", "B905"]
"**/alembic/**" = ["E", "F", "N"]
"**/scripts/**" = ["T20"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["paddleocr.*", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "packages/ontology/tests"]
addopts = "--strict-markers -ra"
markers = [
    "integration: integration tests (require docker)",
    "slow: slow tests",
]
