[project]
name = "phongthuy-bds"
version = "0.1.0"
description = "Phong thủy BĐS — FastAPI backend"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "../../LICENSE" }
dependencies = [
    "phongthuy-ontology",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.6",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "asyncpg>=0.29",                 # async driver for hot paths
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",                    # passlib 1.7 không tương thích bcrypt 5.x

    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "rq>=1.16",                      # job queue
    "httpx>=0.27",
    "structlog>=24.1",
    "cryptography>=42.0",            # for Fernet (DLCN encryption)
    "weasyprint>=62.0",              # PDF generation
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "pillow>=10.0",
    "pdf2image>=1.17",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML",
    "types-python-jose",
    "types-passlib",
    "factory-boy>=3.3",
]

[project.scripts]
phongthuy-bds-api = "phongthuy_bds.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phongthuy_bds"]
